feat: Fast endpoint integration
