# backend/src/WhojooSite.Fuel/WhojooSite.Fuel.Module/Endpoints/FuelModuleApiGroup.cs
@@ -1,0 +1,20 @@
+﻿using FastEndpoints;
+
+using Microsoft.AspNetCore.Builder;
+
+namespace WhojooSite.Fuel.Module.Endpoints;
+
+public sealed class FuelModuleApiGroup : Group
+{
+    public FuelModuleApiGroup()
+    {
+        Configure(
+            "/api/fuel-module",
+            endpointDefinition =>
+            {
+                endpointDefinition.Options(builder => builder
+                    .WithGroupName("fuel-module")
+                    .WithOpenApi());
+            });
+    }
+}
